payement and other edits

--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
             <div class="col-md-12">
                 <div class="form-parent text-center">
                     <h1>Douala Cambridge International School</h1>
-                    <img class="mb-4" src="img/logoC.jpg" alt="" width="100" height="100">
+                    <img class="mb-4" src="img/logoTaxi.jpeg" alt="" width="100" height="100">
                     <form class="form-signin">
                         <!-- <img class="mb-4" src="img/logoC.jpg" alt="" width="72" height="72"> -->
                         <h2 class="h3 mb-3 font-weight-normal">Bienvenu</h2>
@@ -43,6 +43,6 @@
         </div>
     </div>
 </section>
-   
+
 </body>
 </html>
