--- a/destination.html
+++ b/destination.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Payement</title>
+    <title>Destination</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/owl-carousel/owl.carousel.min.css">
@@ -38,21 +38,21 @@
                                 </ol>
                                 <div class="carousel-inner">
                                   <div class="carousel-item active">
-                                    <img src="img/loginbg.jpeg" width="100%" height="200px" class="d-block w-100" alt="...">
+                                    <img src="img/loginbg.jpeg" width="100%" height="150px" class="d-block w-100" alt="...">
                                     <div class="carousel-caption d-none d-md-block">
                                       <h5>First slide label</h5>
                                       <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
                                     </div>
                                   </div>
                                   <div class="carousel-item">
-                                    <img src="img/logoAwim.png" width="100%" height="200px" class="d-block w-100" alt="...">
+                                    <img src="img/logoAwim.png" width="100%" height="150px" class="d-block w-100" alt="...">
                                     <div class="carousel-caption d-none d-md-block">
                                       <h5>Second slide label</h5>
                                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                                     </div>
                                   </div>
                                   <div class="carousel-item">
-                                    <img src="img/login.jpeg" width="100%" height="200px" class="d-block w-100" alt="...">
+                                    <img src="img/login.jpeg" width="100%" height="150px" class="d-block w-100" alt="...">
                                     <div class="carousel-caption d-none d-md-block">
                                       <h5>Third slide label</h5>
                                       <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
@@ -72,39 +72,50 @@
                       <!-- </div> -->
 
                   </div>
-<br>
-                    <div class="row">
-                      <div class="col-md-6 mt-5">
-                        <h2 class="text-secondary">Payement</h2>
-                        <p  class="text-secondary">Veillez valider votre mode de payement</p>
-                      </div>
-                    </div>
+
                   </div>
-                  <div class="container">
-                    <div class="row justify-content-center">
-                      <div class="col-md-6 text-center">
-                        <div class="row">
-                          <div class="col-md-4">
-                            <img src="img/logoTaxi.jpeg" width="100" alt="">
-                          </div>
-                          <div class="col-md-4">
-                            <img src="img/logoTaxi.jpeg" width="100" alt="">
-                          </div>
-                          <div class="col-md-4">
-                            <img src="img/logoTaxi.jpeg" width="100" alt="">
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <!-- Table end -->
-                  <footer class="col-md-12">
-                      <div class="text-center bg-info">
-                        <p class="text-light" style="margin-bottom: 0">Copyright &copy; AWIM 2020</p>
-                      </div>
-                  </footer>
+                  
+                  
         </div>
     </div>
+
+    <section id="destination">
+        <div class="container mt-5">
+            <div class="row justify-content-center">
+              <div class="col-12">
+                <div class="destination-form">
+                    <form>
+                        <div class="form-row">
+                            <div class="col-5">
+                                <div class="form-group">
+                                    <label for="inputEmail4" class="text-secondary">Départ</label>
+                                    <input type="text" class="form-control" id="depart">
+                                  </div>
+                            </div>
+                            <div class="offset-1 col-5 text-right">
+                                <div class="form-group text-left">
+                                    <label for="inputEmail4" class="text-secondary">Arrivé</label>
+                                    <input type="text" class="form-control" id="arrive">
+                                  </div>
+                                <div class="form-group text-left">
+                                    <label for="inputEmail4" class="text-secondary">Montant</label>
+                                    <input type="text" class="form-control" id="montant">
+                                  </div>
+                                  <button type="submit" class="btn btn-success text-right">Valider</button>
+                            </div>
+                        </div>
+                      </form>
+                </div>
+              </div>
+            </div>
+          </div>
+    </section>
+      <!-- Table end -->
+      <footer class="col-md-12">
+          <div class="text-center bg-info">
+            <p class="text-light py-2 py-sm-0 py-md-0" style="margin-bottom: 0">Copyright &copy; AWIM 2020</p>
+          </div>
+      </footer>
 
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
