--- a/login.html
+++ b/login.html
@@ -14,15 +14,14 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="form-parent text-center">
-                    <h1>Douala Cambridge International School</h1>
-                    <img class="mb-4" src="img/logoTaxi.jpeg" alt="" width="100" height="100">
+                    <!-- <img class="mb-4" src="img/logoTaxi.jpeg" alt="" width="100" height="100"> -->
                     <form class="form-signin">
                         <!-- <img class="mb-4" src="img/logoC.jpg" alt="" width="72" height="72"> -->
-                        <h2 class="h3 mb-3 font-weight-normal">Bienvenu</h2>
+                        <h2 class="h3 my-3 font-weight-normal">Bienvenu</h2>
                         <label for="inputEmail" class="sr-only">Email address</label>
-                        <input type="email" id="inputEmail" class="form-control mb-2" placeholder="Email address" required autofocus>
+                        <input type="email" id="inputEmail" class="form-control mb-2" style="border-radius: 20px;" placeholder="user identifiant (Tel, Email...)" required autofocus>
                         <label for="inputPassword" class="sr-only">Password</label>
-                        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+                        <input type="password" id="inputPassword" class="form-control" style="border-radius: 20px;" placeholder="Password" required>
                         <!-- <div class="checkbox mb-3">
                             <label>
                             <input type="checkbox" value="remember-me"> Remember me
@@ -32,7 +31,14 @@
                             <button class="btn btn-lg btn-success text-left" type="submit">Valider</button>
 
                         </div>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <a href="" class="text-info">mot de passe oublié</a><br>
+                                <a href="" class="text-info">créer compte</a>
+                            </div>
+                        </div>
                     </form>
+                    
                 </div>
                 <!-- <footer class="offset-md-1 col-md-11 bg-secondary">
                     <div class="text-center bg-secondary">
@@ -41,6 +47,7 @@
                 </footer> -->
             </div>
         </div>
+        
     </div>
 </section>
 
