--- a/voirDestination.html
+++ b/voirDestination.html
@@ -196,196 +196,51 @@
                     <div class="row wow" data-wow-duration="1s" data-wow-delay=".5s">
 
                         <!-- <div class="swiper-wrapper">  -->
-
-
-                            <div id="clients_list" class="owl-carousel owl-theme">
-
-                                <!-- Client 01 -->
-                                <div class="client mt-3">
-                                    <img src="img/login.jpeg" width="100%" class="img-responsive" alt="client">
+                            
+                              <div class="col-md-12">
+                                <div id="carouselExampleCaptions" style="max-height: 300px; border: 2px solid #868686;padding: 10px;margin-top: 10px;" class="carousel slide" data-ride="carousel">
+                                  <ol class="carousel-indicators">
+                                    <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                                    <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                                    <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                                  </ol>
+                                  <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                      <img src="img/loginbg.jpeg" width="100%" height="200px" class="d-block w-100" alt="...">
+                                      <div class="carousel-caption d-none d-md-block">
+                                        <h5>First slide label</h5>
+                                        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                                      </div>
+                                    </div>
+                                    <div class="carousel-item">
+                                      <img src="img/logoAwim.png" width="100%" height="200px" class="d-block w-100" alt="...">
+                                      <div class="carousel-caption d-none d-md-block">
+                                        <h5>Second slide label</h5>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                      </div>
+                                    </div>
+                                    <div class="carousel-item">
+                                      <img src="img/login.jpeg" width="100%" height="200px" class="d-block w-100" alt="...">
+                                      <div class="carousel-caption d-none d-md-block">
+                                        <h5>Third slide label</h5>
+                                        <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                                      </div>
+                                    </div>
+                                  </div>
+                                  <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Previous</span>
+                                  </a>
+                                  <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Next</span>
+                                  </a>
                                 </div>
-                                <!-- Client 02 -->
-                                <div class="client mt-3">
-                                    <img src="img/logoAwim.png" width="100%" class="img-responsive" alt="client">
-                                </div>
-                                <!-- Client 03 -->
-                                <div class="client mt-3">
-                                    <img src="img/loginbg.jpeg" width="100%" class="img-responsive" alt="client">
-                                </div>
-
-
-                            </div>
-
+                              </div>
                         <!-- </div> -->
 
                     </div>
                   </div>
-
-                  <!-- Modal parent-->
-<div class="modal fade" id="modalparent" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Ajouter Taxi</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <form>
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="form-group">
-                        <label for="recipient-name" class="col-form-label">Marque<span style="color: red;">*</span></label>
-                        <input type="text" class="form-control" id="recipient-name">
-                      </div>
-                </div>
-                <div class="offset-2 col-md-4">
-                    <div class="form-group">
-                        <label for="recipient-name" class="col-form-label">Model<span style="color: red;">*</span></label>
-                        <input type="text" class="form-control" id="recipient-name">
-                      </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="form-group">
-                        <label for="recipient-name" class="col-form-label">Matriculation<span style="color: red;">*</span></label>
-                        <input type="text" class="form-control" id="recipient-name">
-                      </div>
-                </div>
-            </div>
-            <!-- <div class="row">
-                <div class="col-md-10">
-                    <div class="form-group">
-                        <label for="recipient-name" class="col-form-label">Telephone<span style="color: red;">*</span></label>
-                        <input type="text" class="form-control" id="recipient-name">
-                      </div>
-                </div>
-                <div class="col-md-2">
-                    <div class="form-group">
-                        <label for="recipient-name" class="col-form-label">N<span style="color: red;">*</span></label>
-                        <input type="text" class="form-control" id="recipient-name">
-                      </div>
-                </div>
-            </div> -->
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label for="recipient-name" class="col-form-label">Chauffeur<span style="color: red;">*</span></label>
-                        <input type="text" class="form-control" id="recipient-name">
-                      </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label for="recipient-name" class="col-form-label">Proprietaire<span style="color: red;">*</span></label>
-                        <input type="text" class="form-control" id="recipient-name">
-                      </div>
-                </div>
-            </div>
-        </form>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuler</button>
-        <button type="button" class="btn btn-info">Ajouter</button>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- Modal parent end -->
-      <!-- Modal parent substitut -->
-      <div class="modal fade" id="modalsubstitut" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Ajouter Substitut Parent</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <form>
-                  <div class="row">
-                      <div class="col-md-6">
-                          <div class="form-group">
-                              <label for="recipient-name" class="col-form-label">Noms<span style="color: red;">*</span></label>
-                              <input type="text" class="form-control" id="recipient-name">
-                            </div>
-                      </div>
-                      <div class="col-md-6">
-                          <div class="form-group">
-                              <label for="recipient-name" class="col-form-label">Prenoms<span style="color: red;">*</span></label>
-                              <input type="text" class="form-control" id="recipient-name">
-                            </div>
-                      </div>
-                  </div>
-                  <div class="row">
-                      <div class="col-md-6">
-                          <div class="form-group">
-                              <label for="recipient-name" class="col-form-label">Telephone<span style="color: red;">*</span></label>
-                              <input type="text" class="form-control" id="recipient-name">
-                            </div>
-                      </div>
-                      <div class="col-md-6">
-                          <div class="form-group">
-                              <label for="recipient-name" class="col-form-label">Nombres d'enfants<span style="color: red;">*</span></label>
-                              <input type="text" class="form-control" id="recipient-name">
-                            </div>
-                      </div>
-                  </div>
-                  <!-- <div class="row">
-                      <div class="col-md-10">
-                          <div class="form-group">
-                              <label for="recipient-name" class="col-form-label">Telephone<span style="color: red;">*</span></label>
-                              <input type="text" class="form-control" id="recipient-name">
-                            </div>
-                      </div>
-                      <div class="col-md-2">
-                          <div class="form-group">
-                              <label for="recipient-name" class="col-form-label">N<span style="color: red;">*</span></label>
-                              <input type="text" class="form-control" id="recipient-name">
-                            </div>
-                      </div>
-                  </div> -->
-                  <div class="row">
-                      <div class="col-md-6">
-                          <div class="form-group">
-                              <label for="recipient-name" class="col-form-label">Profession<span style="color: red;">*</span></label>
-                              <input type="text" class="form-control" id="recipient-name">
-                            </div>
-                      </div>
-                      <div class="col-md-6">
-                          <div class="form-group">
-                              <label for="recipient-name" class="col-form-label">Adresse<span style="color: red;">*</span></label>
-                              <input type="text" class="form-control" id="recipient-name">
-                            </div>
-                      </div>
-                  </div>
-
-                <div class="row">
-                    <div class="col-md-12">
-                      <div class="input-group mb-3">
-                        <div class="custom-file">
-                          <input type="file" class="custom-file-input" id="inputGroupFile02">
-                          <label class="custom-file-label" for="inputGroupFile02" aria-describedby="inputGroupFileAddon02">Choose file</label>
-                        </div>
-                        <div class="input-group-append">
-                          <span class="input-group-text" id="inputGroupFileAddon02"><i class="fa fa-camera"></i></span>
-                        </div>
-                      </div>
-                    </div>
-                </div>
-
-              </form>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuler</button>
-              <button type="button" class="btn btn-info">Ajouter</button>
-            </div>
-          </div>
-        </div>
-      </div>
-
                   <!-- Table end -->
                   <footer class="offset-md-1 col-md-11 bg-secondary">
                       <div class="text-center bg-secondary">
