--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
                     <!-- <img class="mb-4" src="img/logoTaxi.jpeg" alt="" width="100" height="100"> -->
                     <form class="form-signin">
                         <!-- <img class="mb-4" src="img/logoC.jpg" alt="" width="72" height="72"> -->
-                        <h2 class="h3 my-3 font-weight-normal">Bienvenu</h2>
+                        <h2 class="h3 my-3 font-weight-normal text-light display-3">Bienvenu</h2>
                         <label for="inputEmail" class="sr-only">Email address</label>
                         <input type="email" id="inputEmail" class="form-control mb-2" style="border-radius: 20px;" placeholder="user identifiant (Tel, Email...)" required autofocus>
                         <label for="inputPassword" class="sr-only">Password</label>
@@ -33,8 +33,8 @@
                         </div>
                         <div class="row">
                             <div class="col-md-12">
-                                <a href="" class="text-info">mot de passe oublié</a><br>
-                                <a href="" class="text-info">créer compte</a>
+                                <a href="" class="text-light">mot de passe oublié</a><br>
+                                <a href="" class="text-light">créer compte</a>
                             </div>
                         </div>
                     </form>
