--- a/payement.html
+++ b/payement.html
@@ -80,17 +80,17 @@
                       </div>
                     </div>
                   </div>
-                  <div class="container">
+                  <div class="container mt-3">
                     <div class="row justify-content-center">
                       <div class="col-md-6 text-center">
                         <div class="row">
-                          <div class="col-md-4">
+                          <div class="col-md-4 col-4">
                             <img src="img/logoTaxi.jpeg" width="100" alt="">
                           </div>
-                          <div class="col-md-4">
+                          <div class="col-md-4 col-4">
                             <img src="img/logoTaxi.jpeg" width="100" alt="">
                           </div>
-                          <div class="col-md-4">
+                          <div class="col-md-4 col-4">
                             <img src="img/logoTaxi.jpeg" width="100" alt="">
                           </div>
                         </div>
