--- a/admin2.html
+++ b/admin2.html
@@ -237,7 +237,7 @@
                           </tr>
                         </tbody>
                       </table>
-                      <h4 class="text-center bg-mute">Gestion des Passagers</h4>
+                      <h4 class="text-center bg-mute">Trafic</h4>
                     <table class="table table-hover">
                         <thead>
                           <tr>
