--- a/gestionPassager2.html
+++ b/gestionPassager2.html
@@ -186,13 +186,13 @@
                     </div>
                   </div>
 
-  <!-- target modal 1-->
+  <!-- target modal 1 -->
   <div class="modal fade" id="target1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog" style="max-width: 800px;">
       <div class="modal-content">
         <h4 class="text-center mt-3">Details Passager</h4>
         <div class="row">
-            <div class="offset-4 col-7">
+            <div class="offset-6 col-6">
                 <div class="row">
                     <div class="col-6">
                         Search: <input type="text">
@@ -208,10 +208,12 @@
           <table class="table table-hover">
             <thead>
               <tr>
-                <th scope="col">Numéro passagers</th>
-                <th scope="col">Caisse</th>
-                <th scope="col">Nombre d'utilisation</th>
-                <th scope="col">Action</th>
+                <th scope="col">Heure</th>
+                <th scope="col">Date</th>
+                <th scope="col">Point de départ</th>
+                <th scope="col">Point de arrivé</th>
+                <th scope="col">Montant</th>
+                <th scope="col">Mode de payement</th>
               </tr>
             </thead>
             <tbody>
@@ -220,15 +222,21 @@
                 <td></td>
                 <td></td>
                 <td></td>
-              </tr>
-              <tr>
-                <th scope="row"></th>
-                <td></td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
                 <th scope="row"></th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <th scope="row"></th>
+                <td></td>
+                <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -243,11 +251,11 @@
 
   <!-- target modal 2 -->
   <div class="modal fade" id="target2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog" style="max-width: 800px;">
       <div class="modal-content">
         <h4 class="text-center mt-3">Details Passager</h4>
         <div class="row">
-            <div class="offset-4 col-7">
+            <div class="offset-6 col-6">
                 <div class="row">
                     <div class="col-6">
                         Search: <input type="text">
@@ -263,10 +271,12 @@
           <table class="table table-hover">
             <thead>
               <tr>
-                <th scope="col">Numéro passagers</th>
-                <th scope="col">Caisse</th>
-                <th scope="col">Nombre d'utilisation</th>
-                <th scope="col">Action</th>
+                <th scope="col">Heure</th>
+                <th scope="col">Date</th>
+                <th scope="col">Point de départ</th>
+                <th scope="col">Point de arrivé</th>
+                <th scope="col">Montant</th>
+                <th scope="col">Mode de payement</th>
               </tr>
             </thead>
             <tbody>
@@ -275,15 +285,21 @@
                 <td></td>
                 <td></td>
                 <td></td>
-              </tr>
-              <tr>
-                <th scope="row"></th>
-                <td></td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
                 <th scope="row"></th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <th scope="row"></th>
+                <td></td>
+                <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -296,60 +312,68 @@
   </div>
   <!-- end modal 2  -->
 
-  <!-- target modal 3 -->
-  <div class="modal fade" id="target3" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <h4 class="text-center mt-3">Details Passager</h4>
-        <div class="row">
-            <div class="offset-4 col-7">
-                <div class="row">
-                    <div class="col-6">
-                        Search: <input type="text">
-                    </div>
-                    <div class="col-6">
-                        <span><button class="btn btn-sm bg-info text-light mt-3"><span class="mr-2" style="background: #25648f;"><i class="fa fa-file"></i></span>imprimer la liste</button></span>
-                     </div>
-                </div>
-                
-            </div>
-        </div>
-        <div class="modal-body">
-          <table class="table table-hover">
-            <thead>
-              <tr>
-                <th scope="col">Numéro passagers</th>
-                <th scope="col">Caisse</th>
-                <th scope="col">Nombre d'utilisation</th>
-                <th scope="col">Action</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row"></th>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <th scope="row"></th>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <th scope="row"></th>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-            </tbody>
-          </table>
+    <!-- target modal 3 -->
+    <div class="modal fade" id="target3" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog" style="max-width: 800px;">
+        <div class="modal-content">
+          <h4 class="text-center mt-3">Details Passager</h4>
+          <div class="row">
+              <div class="offset-6 col-6">
+                  <div class="row">
+                      <div class="col-6">
+                          Search: <input type="text">
+                      </div>
+                      <div class="col-6">
+                          <span><button class="btn btn-sm bg-info text-light mt-3"><span class="mr-2" style="background: #25648f;"><i class="fa fa-file"></i></span>imprimer la liste</button></span>
+                       </div>
+                  </div>
+                  
+              </div>
+          </div>
+          <div class="modal-body">
+            <table class="table table-hover">
+              <thead>
+                <tr>
+                  <th scope="col">Heure</th>
+                  <th scope="col">Date</th>
+                  <th scope="col">Point de départ</th>
+                  <th scope="col">Point de arrivé</th>
+                  <th scope="col">Montant</th>
+                  <th scope="col">Mode de payement</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row"></th>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <th scope="row"></th>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+                <tr>
+                  <th scope="row"></th>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <!-- end modal 3  -->
+    <!-- end modal 3 -->
 
                   <!-- Table end -->
                   <footer class="offset-md-1 col-md-11 bg-secondary">
