--- a/gestionPayement.html
+++ b/gestionPayement.html
@@ -116,7 +116,7 @@
                   </main>
 
                   <!-- Table -->
-                  <div class="offset-md-2 col-md-9">
+                  <div class="offset-md-1 col-md-11">
                     <div class="table-parent-gp">
                         <div class="row">
                             <div class="col-12">
@@ -180,11 +180,11 @@
 
       <!-- target modal 1-->
       <div class="modal fade" id="target1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
+        <div class="modal-dialog" style="max-width: 800px;">
           <div class="modal-content">
             <h4 class="text-center mt-3">Details Passager</h4>
             <div class="row">
-                <div class="offset-4 col-7">
+                <div class="offset-6 col-6">
                     <div class="row">
                         <div class="col-6">
                             Search: <input type="text">
@@ -247,11 +247,11 @@
 
       <!-- target modal 2-->
       <div class="modal fade" id="target2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
+        <div class="modal-dialog" style="max-width: 800px;">
           <div class="modal-content">
             <h4 class="text-center mt-3">Details Passager</h4>
             <div class="row">
-                <div class="offset-4 col-7">
+                <div class="offset-6 col-6">
                     <div class="row">
                         <div class="col-6">
                             Search: <input type="text">
@@ -314,11 +314,11 @@
 
       <!-- target modal 3-->
       <div class="modal fade" id="target3" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
+        <div class="modal-dialog" style="max-width: 800px;">
           <div class="modal-content">
             <h4 class="text-center mt-3">Details Passager</h4>
             <div class="row">
-                <div class="offset-4 col-7">
+                <div class="offset-6 col-6">
                     <div class="row">
                         <div class="col-6">
                             Search: <input type="text">
